Change menu to ul

--- a/website/index.html
+++ b/website/index.html
@@ -10,11 +10,11 @@
     <header>
     <h1 id="header-title">Lorenz Hoffmann</h1>
     <nav>
-        <menu>
+        <ul class="none">
         <li>Home</li>
         <li>Projekte</li>
         <li>Kontakt</li>
-        </menu>
+        </ul>
     </nav>
         <span class="material-icons-outlined">dark_mode</span>
     </header>
@@ -72,7 +72,7 @@
     </aside>
 
     <footer>
-        Sie finden mich auf
+        Sie finden mich auf:
         <ul class="horizontal none">
             <li>Twitter</li>
             <li>LinkedIn</li>
